# django-sys-indicator

./: .editorconfig  .pre-commit-config.yaml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  bumpversion.cfg  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml
django_sys_indicator/: apps.py  conf.py  middleware.py
django_sys_indicator/templates/django_sys_indicator/: system_indicator.html
requirements/: compile.py  py310-django32.txt  py310-django40.txt  py311-django41.txt  py311-django42.txt  py37-django22.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py39-django22.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt
src/django_sys_indicator/: apps.py  conf.py  middleware.py  utils.py
test/: settings.py  urls.py
test/tests/: test_custom.py  test_defaults.py
tests/: settings.py  test_django_sys_indicator.py  test_middleware.py  urls.py  views.py
tests/requirements/: compile.py  py310-django32.txt  py310-django40.txt  py310-django42.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt
