[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

[tool.ruff.per-file-ignores]
"__init__.py" = [
  "F401"  # unused-import
]

[tool.ruff.isort]
combine-as-imports = true
