[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = django-sys-indicator
version = 0.0.1
url = https://github.com/marksweb/django-sys-indicator
description = A system/environment indicator for django
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Walker
author_email = theshow@gmail.com
keywords = Django
license = MIT License
classifiers = 
	Development Status :: 3 - Alpha
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir = 
	=src
packages = find:
include_package_data = True
install_requires = django>=3.2
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[bumpversion:file:src/django_sys_indicator/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:HISTORY.rst]
search = 
	unreleased
	----------
replace = 
	unreleased
	----------
	
	{new_version} {utcnow:%%Y-%%m-%%d}
	------------------

[coverage:run]
branch = True
parallel = True
omit = */apps.py
source = 
	django_sys_indicator
	tests

[coverage:paths]
source = 
	src
	.tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 119
extend-ignore = A003,B009,B010,C101,C408,C812,C815,E501,E800,N400,Q000
exclude = migrations,.venv_*,docs

[isort]
combine_as_imports = true
include_trailing_comma = true
known_django = django
known_first_party = django_sys_indicator
line_length = 119
multi_line_output = 5
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
