[metadata]
name = django-sys-indicator
version = 2.0.0
url = https://github.com/marksweb/django-sys-indicator
description = A system/environment indicator for django
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Walker
author_email = theshow@gmail.com
keywords = Django
license = MIT License
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
package_dir =
	=src
packages = find:
include_package_data = True
install_requires = django>=3.2
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
omit = */apps.py
source =
	django_sys_indicator
	tests

[coverage:paths]
source =
	src
	.tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 119
extend-ignore = A003,B009,B010,C101,C408,C812,C815,E501,E800,N400,Q000
exclude = migrations,.venv_*,docs
