[metadata]
name = django-sys-indicator
version = 2.1.0
url = https://github.com/marksweb/django-sys-indicator
description = A system/environment indicator for django
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Walker
author_email = theshow@gmail.com
keywords = Django
license = MIT License
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
package_dir =
	=src
packages = find:
include_package_data = True
install_requires = django>=3.2
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
omit = */apps.py
source =
	django_sys_indicator
	tests

[coverage:paths]
source =
	src

[coverage:report]
show_missing = True
